Fix unreadable text for inline xpost expandos

--- a/sass/misc.scss
+++ b/sass/misc.scss
@@ -291,3 +291,9 @@ ul.report-reasons {
 		}
 	}
 }
+
+// inline / expando cross post preview
+.crosspost-preview {
+	background: $grey_background;
+	border-color: $grey_border;
+}
